--- a/app/src/main/res/layout/fragment_member_center_strategy.xml
+++ b/app/src/main/res/layout/fragment_member_center_strategy.xml
@@ -1,15 +1,36 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.demo.logindemo.activity.personcenter.impl.fragment.MemberCenterStrategyFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:gravity="center"
-        android:textSize="@dimen/dp_80"
+    <!-- 会员攻略 -->
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="会员攻略" />
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="@dimen/dp_100"
+            android:layout_height="match_parent" />
+        <LinearLayout
+            android:layout_margin="@dimen/dp_12"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:text="会员享折扣"
+                android:layout_margin="@dimen/dp_5"
+                android:layout_weight="0.4"
+                android:layout_width="match_parent"
+                android:layout_height="0dp" />
+            <TextView
+                android:text="根据商城管理员的设置，不同等级的会员在购买商品是会拥有不同的折扣优惠，详情可以查看具体商品购买页。"
+                android:layout_margin="@dimen/dp_5"
+                android:layout_weight="0.7"
+                android:layout_width="match_parent"
+                android:layout_height="0dp" />
+        </LinearLayout>
+    </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
