--- a/app/src/main/res/layout/fragment_discount_coupon_unused.xml
+++ b/app/src/main/res/layout/fragment_discount_coupon_unused.xml
@@ -1,15 +1,20 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.demo.logindemo.activity.personcenter.impl.fragment.DiscountCouponUnusedFragment">
 
+
+    <include
+        layout="@layout/item_fragment_discount_coupon_unused"/>
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:textSize="@dimen/dp_80"
-        android:gravity="center"
+    <ListView
+        android:id="@+id/fragment_discount_coupon_unused"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/bargain_unused" />
 
-</FrameLayout>
+
+
+</LinearLayout>
