--- a/app/src/main/res/layout/fragment_order_center_all.xml
+++ b/app/src/main/res/layout/fragment_order_center_all.xml
@@ -1,15 +1,55 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.demo.logindemo.activity.personcenter.impl.fragment.OrderCenterAllFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:gravity="center"
-        android:textSize="@dimen/dp_80"
+    <LinearLayout
+        android:id="@+id/ll_fragment_order_center_all"
+        android:visibility="gone"
+        android:background="#ffffff"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_weight="0.5"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:src="@drawable/zanwudingdan" />
+        <TextView
+            android:gravity="top|center_horizontal"
+            android:layout_weight="0.5"
+            android:textSize="@dimen/dp_40"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:text="@string/order_center_all" />
+    </LinearLayout>
+
+<!--    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        android:id="@+id/ptrlv_fragment_order_center_all"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/order_center_all" />
+        android:background="#99ff44"
+        android:divider="@null"
+        android:scrollbars="none" />-->
 
-</FrameLayout>
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        xmlns:ptr="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/ptrlv_fragment_order_center_all"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ff00aa"
+        ptr:ptrDrawable="@drawable/default_ptr_flip"
+        ptr:ptrAnimationStyle="flip"
+        ptr:ptrHeaderBackground="#383838"
+        ptr:ptrHeaderTextColor="#FFFFFF"
+        />
+<!--    <ListView
+        android:id="@+id/ptrlv_fragment_order_center_all"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>-->
+
+
+</LinearLayout>
